fullstack-node.yaml
Description: Node.js server

Parameters:
  # User data (shell script run on instance launch) is added to
  # UserDataFile parameter from bash file by start_stack script
  UserDataFile:
    Type: String

Resources:
  NodeServer:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: t2.nano
      ImageId: ami-08e4e35cccc6189f4
      SecurityGroups:
        - !Ref SSHSecurityGroup
        - !Ref HTTPSecurityGroup
        - !Ref HTTPSSecurityGroup
      KeyName: NodeServerKey
      UserData: !Ref UserDataFile

  NodeEIP:
    Type: AWS::EC2::EIP
    Properties:
      InstanceId: !Ref NodeServer

  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: SSHGroup
      GroupDescription: Enable SSH access to instances via port 22
      SecurityGroupIngress:
        - CidrIp: 192.222.245.48/32
          FromPort: 22
          ToPort: 22
          IpProtocol: tcp

  HTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: EC2HTTPGroup
      GroupDescription: Enable HTTP traffic to instances via port 80
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 80
          ToPort: 80
          IpProtocol: tcp

  HTTPSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: EC2HTTPSGroup
      GroupDescription: Enable HTTPS traffic to instances via port 443
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          FromPort: 443
          ToPort: 443
          IpProtocol: tcp
